--- a/Gamma Lubricantes/package.json
+++ b/Gamma Lubricantes/package.json
@@ -13,7 +13,9 @@
     "electron-dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:5173/ && electron .\""
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
+    "bootstrap": "^5.3.3",
     "cross-env": "^7.0.3",
     "electron": "^31.0.1",
     "electron-builder": "^24.13.3",
