--- a/Gamma Lubricantes/package.json
+++ b/Gamma Lubricantes/package.json
@@ -16,13 +16,16 @@
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "cross-env": "^7.0.3",
     "electron": "^31.0.1",
     "electron-builder": "^24.13.3",
     "electron-is-dev": "^3.0.1",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
