--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "express-compression": "^1.0.2",
     "mongoose": "^8.4.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.3"
   }
 }
