--- a/Servidor/.env
+++ b/Servidor/.env
@@ -1,4 +1,4 @@
 MONGO_DB_NAME = GammaLubricantes
 MONGO_URI = mongodb+srv://lubricantesgamma33:gammaLUBRI1@cluster0.ngmtb0c.mongodb.net/
 PORT = 8080
-PERSISTENCE = MONGO
+PERSISTENCE = FILE
