--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-compression": "^1.0.2",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.4.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.3"
